INTYG-5398: luae_na utkast konverterat från formly till ue. (Valideringar kvarstår)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/wcHeaderHelp.directive.html
@@ -33,7 +33,7 @@
   <div class="dropshadowfixer" ng-if="vm.expanded"></div>
   <ul uib-dropdown-menu>
     <li ng-if="vm.showCreateAccount">
-      Skapa konto beskrivningstext<br>
+      Är du privatläkare och vill använda Webcert?<br>
       <a href="" id="createAccountLink_dropdown" ng-click="onCreateAccountClick()">Skapa konto</a>
     </li>
     <li ng-if="vm.showAbout"><a href="" id="aboutLink_dropdown" ng-click="onAboutClick()">Om Webcert</a></li>
