INTYG-5425: Alla sektioner i Om webcertdialogen skall vara stängda som default

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body wc-header-about-modal">
   <div uib-accordion close-others="true"
-       ng-init="open = { om: true, terms: false, support: false, faq: false, kakor: false }">
+       ng-init="open = { om: false, terms: false, support: false, faq: false, kakor: false }">
     <div uib-accordion-group panel-class="wc-about-panel" is-open="open.om">
       <div uib-accordion-heading>
         <div class="wc-about-panel-header">
