--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -116,6 +116,7 @@
   @import 'utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss';
   @import 'utkast/unified-edit/components/ueText/ueText.directive.scss';
   @import 'utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss';
+  @import 'utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss';
   @import 'utkast/unified-edit/components/ueYear/ueYear.directive.scss';
   @import 'utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss';
   @import 'utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss';
