DEVENV: add font color to body

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -115,8 +115,8 @@
   @import 'utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss';
   @import 'utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss';
   @import 'utkast/unified-edit/components/ueText/ueText.directive.scss';
-  @import 'utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss';
   @import 'utkast/unified-edit/components/ueTextarea/ueTextArea.directive.scss';
+  @import 'utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss';
   @import 'utkast/unified-edit/components/ueYear/ueYear.directive.scss';
   @import 'utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss';
   @import 'utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss';
@@ -149,6 +149,7 @@
   }
 
   body {
+    color: $wc-color-07;
     @extend %font-common;
     &.start {
       background-color: $wc-color-10;
