INTYG-5337: Fix global css to local. Remove unused code.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -9,7 +9,7 @@
         <ue-form-label config="::config.label"></ue-form-label>
       </div>
       <div ng-class="::{'col-md-{{12 - config.labelColSize}}': config.labelColSize}">
-        <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="form-control"
+        <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="area"
                ng-model="modelGetterSetter"
                ng-model-options="{ debounce: config.numbersOnly ? 0 : 500, getterSetter: true }"
                ng-blur="updateValidation()"
