INTYG-5415: stylat om hälptextrutorna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
@@ -1,3 +1,5 @@
-<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()">
-  <div class="wc-help-chevron__text multiline"><span ng-bind-html="text"></span></div>
+<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()" class="margin-bottom arrow_box">
+    <wc-support-panel-scrollable-body-help-text>
+    <span ng-bind-html="text"></span>
+  </wc-support-panel-scrollable-body-help-text>
 </div>
