--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -26,6 +26,7 @@
   padding: 10px 15px;
   max-height: 13em;
   overflow-y: auto;
+  
 }
 
 .help-th {
@@ -33,4 +34,8 @@
     font-weight: normal;
     max-width: 250px;
   }
+}
+
+.margin-bottom {
+  margin-bottom: 15px;
 }
