INTYG 5336: Fix border color and shadow. Fix style for IE.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
@@ -1,7 +1,14 @@
 ue-textfield {
-  input.form-control.input-full-width {
+  .area {
     width: 100%;
-    max-width: 100%;
+    padding: 10px 6px;
+    border: 1px solid $wc-color-15;
+    border-radius: 4px;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   }
-
+  input:focus {
+    outline: none !important;
+    border: 1px solid $wc-color-21;
+    box-shadow: 2px 2px 4px 0 $black_12;
+  }
 }
