--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
@@ -1,12 +1,11 @@
 ue-textfield {
-  .area {
+  input.form-control {
     width: 100%;
-    padding: 10px 6px;
     border: 1px solid $wc-color-15;
     border-radius: 4px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   }
-  input:focus {
+  input.form-control:focus {
     outline: none !important;
     border: 1px solid $wc-color-21;
     box-shadow: 2px 2px 4px 0 $black_12;
