--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss
@@ -22,9 +22,11 @@ ue-synskarpa {
     width: 38px;
     border-radius: 4px;
     border: solid 1px $wc-color-15;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
   }
-  input.form-control:active {
-    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.12);
-    border: solid 1px $wc-color-21;
+  input.form-control:focus {
+    outline: none !important;
+    border: 1px solid $wc-color-21;
+    box-shadow: 2px 2px 4px 0 $black_12;
   }
 }
