INTYG-5541: Omstrukturering av validering i ue-ramverket

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -1,13 +1,9 @@
-<ue-validation-wrapper field-type="checkgroup"
-                       label-col-size="{{::config.labelColSize}}"
-                       key="{{::config.modelProp}}"
-                       warnings="validation.warningMessagesByField[config.modelProp.toLowerCase()]"
-                       validations="validation.messagesByField[config.modelProp.toLowerCase()]">
+<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
   <div class="form-horizontal">
     <ue-form-label config="::config.label"></ue-form-label>
     <div data-ng-repeat="choice in ::config.choices">
       <label class="big-checkbox-label checkbox-inline">
-        <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]" ng-change="onChange()">
+        <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]" ng-change="updateValidation()">
         <span dynamic-label key="{{::config.code}}.{{::choice}}.RBK"></span>
       </label>
       <div ng-if="::config.enableHelp">
