--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -87,5 +87,5 @@
             </td>
         </tr>
     </table>
-    <wc-field-validation field-type="{{options.type}}" validations="diagnosValidations"></wc-field-validation>
+    <ue-validation-list field-type="{{options.type}}" validations="diagnosValidations"></ue-validation-list>
 </ng-form>
