--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
@@ -35,5 +35,6 @@
         </div>
 
     </ue-validation-wrapper>
+    <ue-validation-list field-type="ue-dropdown" validations="validation.messagesByField[config.modelProp + '.dagartillarbete']"></ue-validation-list>
 
 </div>
