--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
@@ -4,10 +4,16 @@ ue-textfield {
     border: 1px solid $wc-color-15;
     border-radius: 4px;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+
+    &.input-full-width {
+      width: 100%;
+      max-width: 100%;
+    }
   }
   input.form-control:focus {
     outline: none !important;
     border: 1px solid $wc-color-21;
     box-shadow: 2px 2px 4px 0 $black_12;
   }
+
 }
