INTYG-5425: Om webcert / vanliga frågor & svar: Smoothscroll så att expanderat svar blir synligt

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-ng-click="close()">×</button>
   <h3 id="omWebcertDialog">Om Webcert</h3>
 </div>
-<div class="modal-body wc-header-about-modal">
+<div class="modal-body wc-header-about-modal" id="wc-about-modal-body">
   <div uib-accordion close-others="true"
        ng-init="open = { om: false, terms: false, support: false, faq: false, kakor: false }">
     <div uib-accordion-group panel-class="wc-about-panel" is-open="open.om">
