INTYG-5401: Dödsorsaksintyg i UE.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -111,6 +111,9 @@
   @import 'utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss';
   @import 'utkast/unified-edit/components/ueAlert/ueAlert.directive.scss';
   @import 'utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss';
+  @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakFoljd.scss';
+  @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.scss';
+  @import 'utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss';
   @import 'utkast/unified-edit/components/ueDropdown/ueDropdown.directive.scss';
   @import 'utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss';
   @import 'utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss';
