INTYG-5564: Nya Roboto font-varianter för Light, Regular, Medium och Bold

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
@@ -55,6 +55,7 @@ wc-main-menu {
         &,
         &:hover,
         &:focus {
+          @extend %wc-typo-05;
           background-color: $wc-color-21;
         }
       }
