--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_fonts.scss
@@ -140,7 +140,7 @@ Color and background should be specified at the extension point, eg:
 }
 
 %wc-typo-10 {
-  @include font-variant-bold(14px);
+  @include font-variant-regular(16px);
 }
 
 %wc-typo-11 {
@@ -157,6 +157,9 @@ Color and background should be specified at the extension point, eg:
   @include font-variant-bold(12px);
 }
 
+%wc-typo-14 {
+  @include font-variant-bold(14px);
+}
 
 
 
