INTYG-5335: Styling, minor logic

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
@@ -18,9 +18,10 @@
            datepicker-template-url="/web/webjars/common/webcert/components/date/wcDatePickerField/datepicker.template.html"
            datepicker-popup-template-url="/web/webjars/common/webcert/components/date/wcDatePickerField/datepickerPopup.template.html"
            wc-blur-on-enter
-           wc-date-picker-field-input/>
+           wc-date-picker-field-input
+           ng-focus="focused()"/>
     <span class="input-group-btn">
-      <button type="button" id="{{::domId}}-toggle" class="btn btn-default" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="glyphicon glyphicon-calendar"></i></button>
+      <button type="button" id="{{::domId}}-toggle" class="btn btn-default"  ng-class="{border:isFocused}" ng-click="toggleOpen($event)" ng-disabled="pickerState.isOpen"><i class="material-icons">date_range</i></button>
     </span>
   </span>
 </span>
