--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.scss
@@ -17,9 +17,39 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+
+.wc-datepicker-wrapper {
+  width: 150px !important;
+
+  input.form-control {
+    height: 38px;
+    border: 1px solid $wc-color-15;
+    border-radius: 4px;
+    transition: border-color .36s ease-in-out, box-shadow .36s ease-in-out;
+  }
+  input.form-control:focus {
+    outline: none !important;
+    border: 1px solid $wc-color-21;
+    //box-shadow: 0 4px 2px -2px $black_12;
+    box-shadow: 0 2px 4px 0 $black_12;
+  }
+  .btn-default {
+    border-color: $wc-color-15;
+  }
+  .btn {
+    padding: 6px 5px;
+  }
+  .border {
+    border-color: $wc-color-21;
+    box-shadow: 2px 2px 4px 0 $black_12;
+  }
+}
+
+
 /*
- *  Detta bör kunna tas bort när WC-6.0 görs
+ *  Detta (=nedanför) bör kunna tas bort när WC-6.0 görs
  */
+
 .uib-datepicker-popup.dropdown-menu {
   z-index: 1020;
   border-color: transparent;
