INTYG-5569: Generell hantering av padding mellan komponenter, frågor och kategorier.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -1,4 +1,4 @@
-<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
+<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
   <div class="row form-horizontal">
     <ue-form-label class="col-sm-12" config="::config.label"></ue-form-label>
     <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter()">
@@ -13,3 +13,4 @@
     </div>
   </div>
 </ue-validation-wrapper>
+
