--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePrognos/uePrognos.directive.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="ue-del-fraga">
     <div>
         <ue-form-label config="::config.label"></ue-form-label>
     </div>
