--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'bottom-padding-small': config.paddingBottom}">
+<div class="ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <ue-form-label config="::config.label"></ue-form-label>
     <div class="row form-horizontal">
