--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckbox/ueCheckbox.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckbox/ueCheckbox.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'bottom-padding-small': config.paddingBottom}">
+<div class="ue-del-fraga">
   <label class="big-checkbox-label checkbox-inline" ng-class="::{'bold': config.label.bold}">
     <input type="checkbox"
            ng-attr-id="{{::config.modelProp|ueDomIdFilter}}"
