--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'bottom-padding-small': config.paddingBottom}">
+<div class="ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <div class="form-horizontal row">
       <div class="col-md-6">
