--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -1,4 +1,4 @@
-<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
+<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
   <div class="form-horizontal">
     <ue-form-label config="::config.label"></ue-form-label>
     <div data-ng-repeat="choice in ::config.choices">
