--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -1,4 +1,4 @@
-<div ng-class="{'bottom-padding-small': config.paddingBottom}">
+<div class="ue-del-fraga">
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <div class="input-full form-{{config.formType}}" ng-class="::{'indent' : config.indent, 'bold' : config.bold, 'row': config.labelColSize}">
       <div ng-class="::{'col-md-{{config.labelColSize}}': config.labelColSize}">
