--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueValidationWrapper/ueValidationWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueValidationWrapper/ueValidationWrapper.directive.scss
@@ -19,6 +19,8 @@
 
 ue-validation-wrapper {
 
+  display: block;
+
   .validation-error {
     input:not(.no-fielderror), textarea, .ui-select-match, .wc-datepicker-wrapper button {
       border: 1px solid $wc-color-11;
