--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueComponent.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/ueComponent.scss
@@ -17,21 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-ue-kategori {
-
-  .ue-kategori__heading {
-    display: block;
-    padding: 24px 28px 4px 28px;
-    border-bottom: 2px solid $wc-color-15;
-
-    h3 {
-      position: relative;
-      @extend %wc-typo-02;
-      color: $wc-color-07;
-    }
-  }
-
-  .card {
-    padding-bottom: 28px;
-  }
+.ue-del-fraga {
+  padding-top: 14px;
 }
+
