--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.html
@@ -1,5 +1,5 @@
-<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()" class="margin-bottom arrow_box">
-    <wc-support-panel-scrollable-body-help-text>
+<div uib-collapse="isCollapsed" collapsing="start()" expanding="start()" collapsed="stop()" expanded="stop()" class="wc-help-chevron__margin-bottom wc-help-chevron__arrow_box">
+  <wc-help-chevron-text-scrollable-body>
     <span ng-bind-html="text"></span>
-  </wc-support-panel-scrollable-body-help-text>
+  </wc-help-chevron-text-scrollable-body>
 </div>
