--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -17,25 +17,24 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.wc-help-chevron__text {
-  display: block;
-  border-radius: 4px 4px;
-  background-color: $wc-color-20;
-  color: $wc-color-06;
-  margin: 3px 0 10px 0;
-  padding: 10px 15px;
-  max-height: 13em;
-  overflow-y: auto;
-  
+.wc-help-chevron__arrow_box {
+  position: relative;
+  background: #e9eaed;
 }
-
-.help-th {
-  .wc-help-chevron__text{
-    font-weight: normal;
-    max-width: 250px;
-  }
+.wc-help-chevron__arrow_box:after {
+  bottom: 100%;
+  left: 35px;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(242, 242, 242, 0);
+  border-bottom-color: #e9eaed;
+  border-width: 10px;
+  margin-left: -15px;
 }
-
-.margin-bottom {
-  margin-bottom: 15px;
-}
+.wc-help-chevron__margin-bottom {
+   margin-bottom: 15px;
+ }
