--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronTextScrollableBody/wcHelpChevronTextScrollableBody.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronTextScrollableBody/wcHelpChevronTextScrollableBody.directive.scss
@@ -1,5 +1,24 @@
+/*!
+ * Copyright (C) 2018 Inera AB (http://www.inera.se)
+ *
+ * This file is part of sklintyg (https://github.com/sklintyg).
+ *
+ * sklintyg is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * sklintyg is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
 
-wc-support-panel-scrollable-body-help-text {
+
+wc-help-chevron-text-scrollable-body {
 
   $wc-text-fadeout-height: 30px;
 
@@ -8,8 +27,8 @@ wc-support-panel-scrollable-body-help-text {
   flex: 1;
   max-height: 120px;
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
-  color: #212121;
-  background-color: #e9eaed;
+  color: $wc-color-07;
+  background-color: $wc-color-28;
   border-radius: 2px;
 
   .tab-content-scrollable-body {
@@ -37,23 +56,4 @@ wc-support-panel-scrollable-body-help-text {
       pointer-events: none;
     }
   }
-}
-
-.arrow_box {
-	position: relative;
-	background: #e9eaed;
-}
-.arrow_box:after {
-	bottom: 100%;
-	left: 35px;
-	border: solid transparent;
-	content: " ";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
-	border-color: rgba(242, 242, 242, 0);
-	border-bottom-color: #e9eaed;
-	border-width: 10px;
-	margin-left: -15px;
 }
